# ArkProtocol

./: .gitattributes  .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: reading-index.md
examples/: bip32_demo.rs  hd_usage.rs
src/: common.rs  crypto.rs  errors.rs  hd.rs  lib.rs  main.rs  wallet.rs
tests/: backup_cleanup.rs  backup_cleanup_more.rs  backup_edge.rs  base58check.rs  cli.rs  cli_backup.rs  cli_backup_json.rs  cli_encrypted.rs  cli_hd.rs  cli_password_errors.rs  cli_recover_json.rs  cli_smoke.rs  hd_errors.rs  hd_passphrase.rs  hd_props.rs  hd_wallet.rs  prop_wallet.rs  wallet_encrypt_randomized.rs
tools/: generate-reading-index.ps1  nav.ps1
