[package]
name = "ark_protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<your-org>/ArkProtocol"
description = "Rust wallet/HD demo with secure backup"
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
keywords = ["wallet", "bip39", "hd", "aes-gcm"]

[features]
default = []
hd     = ["dep:bip39", "dep:bip32"]
backup = ["dep:inquire"]
argon2 = ["dep:argon2"]
memlock = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
secp256k1 = "0.28"
sha2 = "0.10"
aes-gcm = "0.10"
pbkdf2 = "0.12"
zeroize = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
hex = "0.4"
bs58 = "0.5"
ripemd = "0.1"

# 可选依赖
bip39   = { version = "2.2", optional = true }
bip32   = { version = "0.5", optional = true }
inquire = { version = "0.7", optional = true }
argon2  = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Memory",
] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
uuid = { version = "1", features = ["v4"] }
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = "z"